--- a/TestReport/Report.html
+++ b/TestReport/Report.html
@@ -53,7 +53,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Sep 17, 2018 01:09:31 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Sep 18, 2018 01:03:37 PM</span>
 				</a>
 			</li>
 			<li>
@@ -166,14 +166,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>invalidLoginTest_EmptyUsername</span>
-						<span class='test-time'>Sep 17, 2018 01:09:31 PM</span>
+						<span class='test-time'>Sep 18, 2018 01:03:38 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Sep 17, 2018 01:09:31 PM</span>
-	<span class='label end-time'>Sep 17, 2018 01:09:33 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 1s+920ms</span>
+	<span class='label start-time'>Sep 18, 2018 01:03:38 PM</span>
+	<span class='label end-time'>Sep 18, 2018 01:03:42 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+372ms</span>
 </div>
 	<div class='test-attributes'>
 			<div class='author-list'>
@@ -192,12 +192,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:09:33 PM</td>
+					<td class='timestamp'>1:03:41 PM</td>
 					<td class='step-details'>click on By.xpath: //input[@value='Entrar']</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:09:33 PM</td>
+					<td class='timestamp'>1:03:42 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -210,14 +210,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>invalidLoginTest_WrongPassword</span>
-						<span class='test-time'>Sep 17, 2018 01:09:45 PM</span>
+						<span class='test-time'>Sep 18, 2018 01:03:52 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Sep 17, 2018 01:09:45 PM</span>
-	<span class='label end-time'>Sep 17, 2018 01:09:59 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 14s+126ms</span>
+	<span class='label start-time'>Sep 18, 2018 01:03:52 PM</span>
+	<span class='label end-time'>Sep 18, 2018 01:04:01 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 8s+753ms</span>
 </div>
 	<div class='test-attributes'>
 			<div class='author-list'>
@@ -236,27 +236,27 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:09:47 PM</td>
+					<td class='timestamp'>1:03:54 PM</td>
 					<td class='step-details'>writeText 'administrator' on By.id: username</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:09:52 PM</td>
+					<td class='timestamp'>1:03:56 PM</td>
 					<td class='step-details'>click on By.xpath: //input[@value='Entrar']</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:09:54 PM</td>
+					<td class='timestamp'>1:03:57 PM</td>
 					<td class='step-details'>writeText 'administrator' on By.id: password</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:09:58 PM</td>
+					<td class='timestamp'>1:04:01 PM</td>
 					<td class='step-details'>click on By.xpath: //input[@value='Entrar']</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:09:59 PM</td>
+					<td class='timestamp'>1:04:01 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -269,14 +269,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
 					<div class='test-heading'>
 						<span class='test-name'>invalidLoginTest_WrongUsername</span>
-						<span class='test-time'>Sep 17, 2018 01:10:13 PM</span>
+						<span class='test-time'>Sep 18, 2018 01:04:12 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Sep 17, 2018 01:10:13 PM</span>
-	<span class='label end-time'>Sep 17, 2018 01:10:17 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+909ms</span>
+	<span class='label start-time'>Sep 18, 2018 01:04:12 PM</span>
+	<span class='label end-time'>Sep 18, 2018 01:04:22 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 10s+497ms</span>
 </div>
 	<div class='test-attributes'>
 			<div class='author-list'>
@@ -295,27 +295,27 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:10:14 PM</td>
+					<td class='timestamp'>1:04:13 PM</td>
 					<td class='step-details'>writeText 'Jose das cove' on By.id: username</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:10:15 PM</td>
+					<td class='timestamp'>1:04:16 PM</td>
 					<td class='step-details'>click on By.xpath: //input[@value='Entrar']</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:10:15 PM</td>
+					<td class='timestamp'>1:04:18 PM</td>
 					<td class='step-details'>writeText 'administrator' on By.id: password</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:10:17 PM</td>
+					<td class='timestamp'>1:04:21 PM</td>
 					<td class='step-details'>click on By.xpath: //input[@value='Entrar']</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:10:17 PM</td>
+					<td class='timestamp'>1:04:22 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -328,14 +328,14 @@
 				<li class='test displayed active  fail' status='fail' bdd='false' test-id='4'>
 					<div class='test-heading'>
 						<span class='test-name'>validLoginTest</span>
-						<span class='test-time'>Sep 17, 2018 01:10:25 PM</span>
+						<span class='test-time'>Sep 18, 2018 01:04:35 PM</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Sep 17, 2018 01:10:25 PM</span>
-	<span class='label end-time'>Sep 17, 2018 01:10:30 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+357ms</span>
+	<span class='label start-time'>Sep 18, 2018 01:04:35 PM</span>
+	<span class='label end-time'>Sep 18, 2018 01:04:42 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 6s+462ms</span>
 </div>
 	<div class='test-attributes'>
 			<div class='author-list'>
@@ -354,55 +354,55 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:10:26 PM</td>
+					<td class='timestamp'>1:04:36 PM</td>
 					<td class='step-details'>writeText 'administrator' on By.id: username</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:10:27 PM</td>
+					<td class='timestamp'>1:04:38 PM</td>
 					<td class='step-details'>click on By.xpath: //input[@value='Entrar']</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:10:28 PM</td>
+					<td class='timestamp'>1:04:39 PM</td>
 					<td class='step-details'>writeText 'lucas' on By.id: password</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:10:30 PM</td>
+					<td class='timestamp'>1:04:41 PM</td>
 					<td class='step-details'>click on By.xpath: //input[@value='Entrar']</td>
 				</tr>
 				<tr class='log' status='fail'>
 					<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-					<td class='timestamp'>1:10:30 PM</td>
-					<td class='step-details'><pre>java.lang.AssertionError: expected [true] but found [false]
-	at org.testng.Assert.fail(Assert.java:96)
-	at org.testng.Assert.failNotEquals(Assert.java:776)
-	at org.testng.Assert.assertTrue(Assert.java:44)
-	at org.testng.Assert.assertTrue(Assert.java:54)
+					<td class='timestamp'>1:04:42 PM</td>
+					<td class='step-details'><pre>java.lang.AssertionError: did not expect to find [true] but found [false]
+	at org.testng.Assert.fail(Assert.java:97)
+	at org.testng.Assert.failNotEquals(Assert.java:969)
+	at org.testng.Assert.assertTrue(Assert.java:43)
+	at org.testng.Assert.assertTrue(Assert.java:53)
 	at tests.LoginTest.validLoginTest(LoginTest.java:26)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
 	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
-	at org.testng.TestNG.runSuites(TestNG.java:1049)
-	at org.testng.TestNG.run(TestNG.java:1017)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:131)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:658)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:792)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1103)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:140)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:122)
+	at org.testng.TestRunner.privateRun(TestRunner.java:739)
+	at org.testng.TestRunner.run(TestRunner.java:589)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:398)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:392)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:354)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:302)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1145)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1067)
+	at org.testng.TestNG.runSuites(TestNG.java:997)
+	at org.testng.TestNG.run(TestNG.java:965)
 	at org.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:72)
 	at org.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:123)
 </pre></td>
@@ -491,22 +491,22 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td>Sep 17, 2018 01:09:31 PM</td>
+                                                <td>Sep 18, 2018 01:03:38 PM</td>
                                                 <td class='linked' test-id='1'>invalidLoginTest_EmptyUsername</td>
                                                 <td><span class='test-status pass'>pass</span></td>
                                             </tr>
                                             <tr>
-                                                <td>Sep 17, 2018 01:09:45 PM</td>
+                                                <td>Sep 18, 2018 01:03:52 PM</td>
                                                 <td class='linked' test-id='2'>invalidLoginTest_WrongPassword</td>
                                                 <td><span class='test-status pass'>pass</span></td>
                                             </tr>
                                             <tr>
-                                                <td>Sep 17, 2018 01:10:13 PM</td>
+                                                <td>Sep 18, 2018 01:04:12 PM</td>
                                                 <td class='linked' test-id='3'>invalidLoginTest_WrongUsername</td>
                                                 <td><span class='test-status pass'>pass</span></td>
                                             </tr>
                                             <tr>
-                                                <td>Sep 17, 2018 01:10:25 PM</td>
+                                                <td>Sep 18, 2018 01:04:35 PM</td>
                                                 <td class='linked' test-id='4'>validLoginTest</td>
                                                 <td><span class='test-status fail'>fail</span></td>
                                             </tr>
@@ -568,36 +568,36 @@
                                         </thead>
                                         <tbody>
                                                     <tr>
-                                                        <td>Sep 17, 2018 01:10:25 PM</td>
+                                                        <td>Sep 18, 2018 01:04:35 PM</td>
                                                         <td class='linked' test-id='4'>validLoginTest</td>
-                                                        <td><pre><pre>java.lang.AssertionError: expected [true] but found [false]
-	at org.testng.Assert.fail(Assert.java:96)
-	at org.testng.Assert.failNotEquals(Assert.java:776)
-	at org.testng.Assert.assertTrue(Assert.java:44)
-	at org.testng.Assert.assertTrue(Assert.java:54)
+                                                        <td><pre><pre>java.lang.AssertionError: did not expect to find [true] but found [false]
+	at org.testng.Assert.fail(Assert.java:97)
+	at org.testng.Assert.failNotEquals(Assert.java:969)
+	at org.testng.Assert.assertTrue(Assert.java:43)
+	at org.testng.Assert.assertTrue(Assert.java:53)
 	at tests.LoginTest.validLoginTest(LoginTest.java:26)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
 	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
-	at org.testng.TestNG.runSuites(TestNG.java:1049)
-	at org.testng.TestNG.run(TestNG.java:1017)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:131)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:658)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:792)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1103)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:140)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:122)
+	at org.testng.TestRunner.privateRun(TestRunner.java:739)
+	at org.testng.TestRunner.run(TestRunner.java:589)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:398)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:392)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:354)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:302)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1145)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1067)
+	at org.testng.TestNG.runSuites(TestNG.java:997)
+	at org.testng.TestNG.run(TestNG.java:965)
 	at org.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:72)
 	at org.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:123)
 </pre></pre></td>
@@ -638,19 +638,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Sep 17, 2018 01:09:31 PM</div>
+					<div class='panel-lead'>Sep 18, 2018 01:03:37 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Sep 17, 2018 01:10:31 PM</div>
+			 		<div class='panel-lead'>Sep 18, 2018 01:04:43 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 59s+885ms</div>
+					<div class='panel-lead'>0h 1m 5s+731ms</div>
 				</div>
 			</div>
 		</div>
